--- a/src/components/Select.css
+++ b/src/components/Select.css
@@ -1,4 +1,5 @@
-/* ARROW NEEDS STYLING */
+/* Arrow needs styling */
+
 .select-default, .select-ml, .select-l { 
   font-size: 14px;
   font-family: "Helvetica";
