--- a/src/components/Checkboxes.css
+++ b/src/components/Checkboxes.css
@@ -22,11 +22,10 @@
 }
 
 .text {
-  width: 300px;
+  width: auto;
   padding: 0 0 0 15px;
   font-family: "Helvetica";
   font-size: 14px;
   font-weight: lighter;
-
 }
 
