--- a/src/components/Counter.css
+++ b/src/components/Counter.css
@@ -8,6 +8,6 @@
   padding: 18px 23px;
 }
 
-.a{background-color: cadetblue;}
-.b{background-color: chocolate;}
-.c{background-color: darkgoldenrod;}
+.a{background-color: lightgray;}
+.b{background-color: lightgray;}
+.c{background-color: lightgray;}
