added hover on first thumbnail

--- a/src/components/Counter.css
+++ b/src/components/Counter.css
@@ -8,6 +8,6 @@
   padding: 18px 23px;
 }
 
-.a{background-color: lightgray;}
-.b{background-color: lightgray;}
-.c{background-color: lightgray;}
+.a{background-color: #F1F3F4;}
+.b{background-color: #F1F3F4;}
+.c{background-color: #F1F3F4;}
