--- a/src/components/Thumbnail.css
+++ b/src/components/Thumbnail.css
@@ -1,18 +1,54 @@
-.thumbnail {
+.thumbnail-dark-landscape, .thumbnail-light-landscape {
+  width: 460px;
+  height: 182px;
+  border-radius: 1%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.thumbnail-light-landscape {
+  background:rgba(231, 231, 2311, 0);
+  border: solid rgba(211, 211, 211) 2px;
+}
+
+.thumbnail-dark-landscape {
+  background:rgb(231, 231, 231);
+  border: solid rgb(231, 231, 231) 2px;
+  border-radius: 5px;
+}
+
+.thumbnail-light-portrait, .thumbnail-dark-portrait {
   height: 349px;
   width: 270px;
-  border: solid rgb(211, 211, 211) 2px;
-  border-radius: 1%;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
 }
 
-.pic {
+.thumbnail-light-portrait {
+  background:rgba(255,255,255,0);
+  border: solid rgb(211, 211, 211) 2px;
+  border-radius: 1%;
+}
+.thumbnail-dark-portrait {
+  background:rgb(231, 231, 231);
+  border: solid rgb(231, 231, 231) 2px;
+  border-radius: 5px;
+}
+
+.pic-light, .pic-dark {
   margin: 10px;
-  background: url(../icons/macbook.jpg);
   height: 153px;
   width: 236px;
+}
+
+.pic-light {
+  background: url(../icons/macBook.svg);
+}
+
+.pic-dark {
+  background: rgb(231, 231, 231, .8) url(../icons/macBook.svg);
 }
 
 .buttons {
@@ -20,16 +56,13 @@
   height: 153px;
   width: 236px;
   opacity: 0;
+  display: flex;
+  justify-content: center;
 }
 
 .buttons:hover {
-  background: rgb(255, 255, 255);
-  height: 153px;
-  width: 236px;
-  opacity: 0;
   opacity: .8;
 }
-
 
 .blue-cart {
   border: 0px;
@@ -66,21 +99,38 @@
   opacity: 0.8;
 }
 
-
-
-.line {
+.line-portrait {
   border: solid lightgray .4px;
   margin: 0 15px;
 }
 
-.title, .new-cost, .old-cost {
+.line-landscape {
+  display: none;
+}
+
+.info-portrait, .info-landscape {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   font-weight: lighter;
   font-size: 12px;
   font-family: "Helvetica";
+}
+
+.info-portrait {
   text-align: center;
 }
 
-.ratings {
+.info-landscape {
+  text-align: left;
+}
+
+.ratings-landscape {
+  display: flex;
+  justify-content: flex-start;
+}
+
+.ratings-portrait {
   display: flex;
   justify-content: center;
 }
