--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -23,6 +23,23 @@ button {
   background-color: rgba(51, 160, 255, 0.2);
   color: rgb(51, 160, 255);
 }
+.button-orange-default {
+  background-color: rgb(255, 116, 51);
+  border-color:  rgb(255, 116, 51);
+}
+.button-orange-default:hover {
+  background-color:  rgb(253, 86, 8);
+  border-color:  rgb(253, 86, 8);
+}
+.button-orange-white {
+  background-color: rgb(251, 251, 251);
+  color:  rgb(253, 86, 8);
+}
+.button-orange-inverse {
+  border: 0px;
+  background-color: rgba(255, 109, 51, 0.2);
+  color: rgb(253, 86, 8);
+}
 .button-danger-default {
   background-color: rgb(255, 104, 117);
   border-color: rgb(255, 104, 117);
